package com.cst438.project2.ui

import androidx.compose.foundation.layout.Arrangement
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Spacer
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.height
import androidx.compose.foundation.layout.padding
import androidx.compose.material3.Button
import androidx.compose.material3.OutlinedTextField
import androidx.compose.material3.Text
import androidx.compose.material3.TextButton
import androidx.compose.runtime.Composable
import androidx.compose.runtime.getValue
import androidx.compose.runtime.mutableStateOf
import androidx.compose.runtime.remember
import androidx.compose.runtime.setValue
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.layout.ContentScale
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.unit.dp
import androidx.compose.foundation.Image
import androidx.compose.ui.text.input.PasswordVisualTransformation
import com.cst438.project2.R

@Composable
fun LoginScreen(
    AdminLogin: () -> Unit,
    EventPage: () -> Unit,
    onSignUpClick: () -> Unit = {}

) {

    var username by remember {
        mutableStateOf("")
    }

    var password by remember {
        mutableStateOf("")
    }

    var message by remember {
        mutableStateOf("")
    }

    Column(
        modifier = Modifier
            .fillMaxSize()
            .padding(30.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {

        Image (painter = painterResource(id = R.drawable.login_logo),
            contentDescription = "Login logo",
            modifier = Modifier
                .fillMaxWidth()
                .height(300.dp),
            contentScale = ContentScale.Fit)



        Text(text ="Login to EventHub")
        Spacer(modifier = Modifier.height(30.dp))

        OutlinedTextField(
            value = username,
            onValueChange = {
                username = it
            },
            label = {
                Text("Username")
            },
            modifier = Modifier.fillMaxWidth()
        )
        Spacer(modifier = Modifier.height(20.dp))

        OutlinedTextField(
            value = password,
            onValueChange = { password = it },
            label = {Text("Password")},
                visualTransformation = PasswordVisualTransformation(),
                modifier = Modifier.fillMaxWidth()


        )

        Spacer(modifier = Modifier.height(20.dp))

        Button(
            onClick = {
                if (username == "Justin" && password == "hello") {
                    EventPage()

                } else if (username == "Victor" && password == "admin123") {
                    AdminLogin()

                } else {
                    message = "Wrong username or password"

                }


            },
            modifier = Modifier.fillMaxWidth()

        ) {

            Text("Login")
        }

        Spacer(modifier = Modifier.height(15.dp))
        Text(text =message)

        TextButton(onClick = onSignUpClick) {
            Text("Create an account")
        }





    }

}